Fixes background on mobile/tablets

--- a/src/globals.css
+++ b/src/globals.css
@@ -9,11 +9,22 @@
 body {
   font-family: Georgia, Helvetica, sans-serif;
   overflow-x: hidden;
-  background:url('images/projects/about-me.jpg') top right no-repeat;
-  background-attachment:fixed;
-  background-size: cover;
 }
 
 li {
   list-style-type: none;
+}
+
+.bg-img {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background:url('images/projects/about-me.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
